fix contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -73,7 +73,7 @@ nav ul {
 
 nav ul a {
   text-decoration: none;
-  color: var(--text-primary-color);
+  color: var(--text-secondary-color);
 }
 
 nav li {
